GENERATOR_OUTPUT/manifests/kubeflow-tools/katib/patches/patch-katib-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  gateways:
    - deploykf-istio-gateway/kubeflow-gateway
