GENERATOR_OUTPUT/manifests/kubeflow-tools/katib/patches/patch-katib-ui-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  rules:
    ## allow requests from `deploykf-istio-gateway` Pods
    - from:
        - source:
            principals:
              - "cluster.local/ns/deploykf-istio-gateway/sa/deploykf-gateway"
      to:
        - operation:
            ports:
              - "8080"
